advanced models section : addition of blog text

--- a/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
+++ b/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
@@ -82,6 +82,66 @@ Certaines caractéristiques ont simplement été adaptées par rapport au Milest
   le temps écoulé (en
   sec)
 
+## Modèles avancés
+
+On a également éssayé le modèle XGBoost. Voila les résultats obtenus avec trois configurations différentes
+de ce type de modèle:
+
+![](/public/modele_avance_q3_roc.png)
+
+![](/public/modele_avance_q3_goal_rate.png)
+
+<!-- Ajouter courbe cumulative -->
+
+![](/public/modele_avance_q3_reliability_diagram.png)
+
+Comme suit, on va expliquer chacune des trois configurations.
+
+### Modèle XGBoost de base
+
+Ici, on voulait obtenir un résultat de base avec le modèle de type XGBoost.
+On a donc divisé nos données en deux ensembles: un ensemble d'entrainement ayant **80%** des données et un ensemble de validation ayant **20%** des données.
+Cette répartition a été faite tout en préservant les proportions des catégories dans chaque ensemble.
+Autrement dit, pour chacun de ces deux ensembles, on avait toujours environ **10%** des données qui sont des buts et **90%** des données qui ne le sont pas.
+Le modèle a été entrainé sur l'ensemble d'entrainement avec les valeurs d'hyper-paramètres
+par défaut et a été évalué sur l'ensemble de validation pour obtenir les résultats des courbes précédentes.
+De plus, seulement la distance et l'angle ont été utilisés comme variables explicatives.
+
+Il est naturel de comparer ce modèle au modèle de régression logistique (entrainé en utilisant uniquement la distance et l'angle) obtenu précédement.
+Tout d'abord, les deux modèles ont un AUC similaire (autour de **0.71**).
+Leurs courbes de taux de buts en fonction du percentile de probabilité sont similaires. En effet, elles croissent de la même manière quand le percentile
+augmente. Ca démontre que les probabilités prédites par les deux modèles sont assez cohérentes avec les fréquences observées.
+
+<!-- Ajouter comment courbe cumulative -->
+
+La courbe de calibration du modèle xgboost est cohérente au début
+mais devient incohérente aux extrémités et décroit, ce qui met en évidende la tendance du modèle à sur-prédire.
+La courbe de calibration du modèle logistique met plutot en évidence une tendance à sous-prédire.
+Cependant, il y'a des chances que ces tendance de sur et de sous-prédictions ne soient pas éffective, notament dans les cas
+ou il n'y a pas assez de données dans ces intervalles(bins) de sur ou de sous-prédictions.
+
+<!-- Ajouter lien expérience wandb -->
+
+### Modèle XGBoost avec de nouvelles caractéristiques
+
+Ici, on a entrainé le modèle XGBoost en utilisant 15 variables explicatives au total dont **la distance, l'angle, les coordonées,
+la période, le type de tir** et autres.
+Pour trouver les hyper-paramètres optimaux de ce modèle, on a utilisé la recherche par grille avec une validation croisée. On s'est
+focalisé sur les hyper-paramètres suivants : le taux d'apprentissage, la profondeur maximale des arbres, le nombre d'arbres
+et la proportion des échantillons utilisés par chaque arbre. La combinaison d'hyper-paramètre qu'on a choisie est celle qui minimisait l'**érreur de calibration attendue** ou encore
+qui maximisait l'**érreur de calibration attendue négative**. Le graphique suivant donne un apercu de nos expérimentations:
+
+![](/public/modele_avance_q2_grid_search_hyperparameter_new.png)
+
+C'est donc la 16ième combinaison d'hyperparamètres qu'on a choisie pour notre modèle.
+Concernant les résultats du modèle, on voit qu'il a un meilleur AUC que le modèle XGBoost de base, tout en restant assez bien calibré.
+
+<!-- Ajouter lien expérience wandb -->
+
+### Modèle XGBoost avec des caractéristiques sélectionnées
+
+
+
 ## Faites de votre mieux
 
 Nous avons commencé par utiliser des réseaux de neurones Perceptron et multicouches (MLP) pour évaluer différentes
