--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -3640,9 +3640,8 @@
    "cell_type": "code",
    "id": "602b7eaf87f5fe44",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-23T01:35:25.878926Z",
-     "start_time": "2024-11-23T01:35:22.485117Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
@@ -3682,122 +3681,8 @@
     "# Terminer l'expérience\n",
     "wandb.finish()"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "Tracking run with wandb version 0.18.7"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "Run data is saved locally in <code>C:\\Users\\maciu\\OneDrive - Universite de Montreal\\Documents\\1-UNIVERSITE DE MONTREAL\\1-COURS\\2- Automne 2024\\IFT6758 - Data Science\\1- IFT 6758 A\\4- Projet\\IFT6758-A11-Milestone2_22_Nov_last\\wandb\\run-20241122_203522-tis31kfy</code>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/tis31kfy' target=\"_blank\">LogisticRegression_Distance_Angle</a></strong> to <a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br/>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       " View project at <a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11' target=\"_blank\">https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11</a>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       " View run at <a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/tis31kfy' target=\"_blank\">https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/tis31kfy</a>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "\n",
-       "    <style>\n",
-       "        .wandb-row {\n",
-       "            display: flex;\n",
-       "            flex-direction: row;\n",
-       "            flex-wrap: wrap;\n",
-       "            justify-content: flex-start;\n",
-       "            width: 100%;\n",
-       "        }\n",
-       "        .wandb-col {\n",
-       "            display: flex;\n",
-       "            flex-direction: column;\n",
-       "            flex-basis: 100%;\n",
-       "            flex: 1;\n",
-       "            padding: 10px;\n",
-       "        }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>val_expected_calibration_error</td><td>▁</td></tr><tr><td>val_f1_score_weighted</td><td>▁</td></tr><tr><td>val_roc_auc</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>val_expected_calibration_error</td><td>0.00882</td></tr><tr><td>val_f1_score_weighted</td><td>0.95042</td></tr><tr><td>val_roc_auc</td><td>0.70931</td></tr></table><br/></div></div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">LogisticRegression_Distance_Angle</strong> at: <a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/tis31kfy' target=\"_blank\">https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/tis31kfy</a><br/> View project at: <a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11' target=\"_blank\">https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ],
-      "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20241122_203522-tis31kfy\\logs</code>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 59
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
