Début implémentation partie Test

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -1168,7 +1168,7 @@
     "\n",
     "plt.legend(fontsize=12)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('2-3-3c_proportion_de_buts.png')\n",
+    "plt.savefig('./images/2-3-3c_proportion_de_buts.png')\n",
     "plt.show()\n"
    ],
    "outputs": [],
@@ -1253,7 +1253,7 @@
     "# Enregistrer les métriques dans Wandb\n",
     "wandb.log({\"val_roc_auc\": auc_roc1, \"val_f1_score_weighted\": f1_score1, \"val_expected_calibration_error\": ece1})\n",
     "\n",
-    "model_path1 = \"LogisticRegression_Distance.pkl\"\n",
+    "model_path1 = \"./artifacts/LogisticRegression_Distance.pkl\"\n",
     "with open(model_path1, \"wb\") as f:\n",
     "    pickle.dump(clf1, f)\n",
     "\n",
@@ -1305,7 +1305,7 @@
     "# Enregistrer les métriques dans Wandb\n",
     "wandb.log({\"val_roc_auc\": auc_roc2, \"val_f1_score_weighted\": f1_score2, \"val_expected_calibration_error\": ece2})\n",
     "\n",
-    "model_path2 = \"LogisticRegression_Angle.pkl\"\n",
+    "model_path2 = \"./artifacts/LogisticRegression_Angle.pkl\"\n",
     "with open(model_path2, \"wb\") as f:\n",
     "    pickle.dump(clf2, f)\n",
     "\n",
@@ -1357,7 +1357,7 @@
     "# Enregistrer les métriques dans Wandb\n",
     "wandb.log({\"val_roc_auc\": auc_roc3, \"val_f1_score_weighted\": f1_score3, \"val_expected_calibration_error\": ece3})\n",
     "\n",
-    "model_path3 = \"LogisticRegression_Distance_Angle.pkl\"\n",
+    "model_path3 = \"./artifacts/LogisticRegression_Distance_Angle.pkl\"\n",
     "with open(model_path3, \"wb\") as f:\n",
     "    pickle.dump(clf3, f)\n",
     "\n",
@@ -1982,7 +1982,7 @@
     "\n",
     "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score_weighted\": f1, \"val_expected_calibration_error\": ece })\n",
     "\n",
-    "model_path = \"XGBoost_improved_with_new_features.pkl\"\n",
+    "model_path = \"./artifacts/XGBoost_improved_with_new_features.pkl\"\n",
     "with open(model_path, \"wb\") as f:\n",
     "    pickle.dump(xgb_advanced, f)\n",
     "\n",
@@ -2198,7 +2198,7 @@
     "\n",
     "plt.title(\"ROC Curves for XGBoost Models\")\n",
     "plt.grid(True)\n",
-    "plt.savefig('modele_avance_q3_roc.png', dpi=300)\n",
+    "plt.savefig('./images/modele_avance_q3_roc.png', dpi=300)\n",
     "plt.show()"
    ],
    "outputs": [],
@@ -2236,7 +2236,7 @@
     "plt.ylim(0, 100)\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
-    "plt.savefig('modele_avance_q3_goal_rate.png', dpi=300)\n",
+    "plt.savefig('./images/modele_avance_q3_goal_rate.png', dpi=300)\n",
     "plt.show()"
    ],
    "outputs": [],
@@ -2270,7 +2270,7 @@
     "CalibrationDisplay.from_predictions(y_val_advanced_2, y_predicted_prob_advanced_2, n_bins=10, ax=ax, name=\"XGBoost avancé - caractéristiques sélectionnées\")\n",
     "\n",
     "plt.title(\"Diagramme de fiabilité\")\n",
-    "plt.savefig('modele_avance_q3_reliability_diagram.png', dpi=300)\n",
+    "plt.savefig('./images/modele_avance_q3_reliability_diagram.png', dpi=300)\n",
     "plt.show()"
    ],
    "outputs": [],
@@ -2316,7 +2316,7 @@
     "# Enregistrer les métriques dans Wandb\n",
     "wandb.log({\"val_roc_auc\": auc_roc, \"val_f1_score_weighted\": f1, \"val_expected_calibration_error\": ece })\n",
     "\n",
-    "model_path = \"XGBoost_improved_with_selected_features.pkl\"\n",
+    "model_path = \"./artifacts/XGBoost_improved_with_selected_features.pkl\"\n",
     "with open(model_path, \"wb\") as f:\n",
     "    pickle.dump(xgb_advanced_2, f)\n",
     "\n",
@@ -2334,9 +2334,9 @@
    "id": "2da3a95018a2af0b",
    "metadata": {},
    "source": [
-    "# Faites de votre mieux!\n",
+    "# Faites de votre mieux !\n",
     "\n",
-    "### Implémentation des réseaux de neurones"
+    "### Implémentation de modèles avancées"
    ]
   },
   {
@@ -2521,6 +2521,7 @@
     "start_year = 2020\n",
     "end_year = 2021\n",
     "\n",
+    "\n",
     "if not os.path.isfile(filename):\n",
     "    # Get the data from the NHL API (2020 - 2021)\n",
     "    nhl_data_provider = get_data_from(start_year, end_year)\n",
@@ -2598,8 +2599,6 @@
    "id": "285cbf69141f057d",
    "metadata": {},
    "source": [
-    "#TODO: CODE ICI\n",
-    "\n",
     "characteristics = xgb_num_characteristics + xgb_categorial_characteristics\n",
     "\n",
     "x_test = regular_test_data[characteristics].dropna()\n",
@@ -2643,82 +2642,53 @@
    "cell_type": "markdown",
    "id": "2e66e9988a15241d",
    "metadata": {},
-   "source": [
-    "### Préparation des données pour les réseaux de neurones"
-   ]
+   "source": "### Meilleur modèle avancé (TODO)"
   },
   {
-   "cell_type": "code",
-   "id": "d82b76b63dbf9e43",
    "metadata": {},
+   "cell_type": "code",
    "source": [
-    "# Chargement des données de test\n",
-    "X_regular = regular_test_data[characteristics]\n",
-    "y_regular = regular_test_data['isGoal'][X_regular.index]\n",
+    "# Sélection des caractéristiques\n",
+    "characteristics = ['shotDistance', 'shotAngle', 'numberPeriod', 'gameSeconds'\n",
+    "    , 'emptyGoalNet', 'offensivePressureTime', 'speedFromLastEvent', 'distanceFromLastEvent']\n",
     "\n",
-    "# Ajout dans le fichier config.py :\n",
-    "config.TEST_DATA = X_regular.to_numpy()"
+    "X = regular_test_data[characteristics].dropna()\n",
+    "y = regular_test_data['isGoal'][X.index]\n",
+    "\n",
+    "# Chargement des données\n",
+    "config.INPUTS_DATA = X.to_numpy()\n",
+    "config.LABELS_DATA = y.to_numpy()"
    ],
+   "id": "9efd547004f96d0b",
    "outputs": [],
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "4eabd2ffc8dc8d9c",
    "metadata": {},
-   "source": [
-    "### Perceptron"
-   ]
-  },
-  {
    "cell_type": "code",
-   "id": "e01ba9b8c60fbeb8",
-   "metadata": {},
    "source": [
-    "y_pred = model_start.predict_data(\"Perceptron\")\n",
-    "f1 = f1_score(y_pred, y_regular, average=\"weighted\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+    "# Initialize a run\n",
+    "run = wandb.init(project=config.WANDB_PROJECT_NAME, entity=config.WANDB_TEAM_NAME)\n",
+    "\n",
+    "# Access and download model. Returns path to downloaded artifact\n",
+    "downloaded_model_path = run.use_model(name = \"XGBoost_improved_with_new_features:latest\")\n",
+    "\n",
+    "# Charger le modèle\n",
+    "with open(downloaded_model_path, \"rb\") as file:  # \"rb\" signifie lecture en mode binaire\n",
+    "    xgb_model = pickle.load(file)\n",
+    "\n",
+    "y_pred_prob_xgb = xgb_model.predict_proba(x_test_transformed)[:, 1]\n",
+    "y_pred_xgb = xgb_model.predict(x_test_transformed)\n",
+    "\n",
+    "auc_roc = roc_auc_score(y_test, y_pred_prob_xgb)\n",
+    "f1 = f1_score(y_pred_xgb, y_test, average=\"weighted\")\n",
+    "ece = compute_ece(y_test, y_pred_prob_xgb)\n",
+    "\n",
+    "print(f\"F1 pondéré: {f1}\")\n",
+    "print(f\"AUC: {auc_roc}\")\n",
+    "print(f\"ece: {ece}\")"
    ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2ae5701f1d4b1b12",
-   "metadata": {},
-   "source": [
-    "### MLP 1 couche cachée"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "ee846e308235c4a0",
-   "metadata": {},
-   "source": [
-    "y_pred = model_start.predict_data(\"MLP_H1\")\n",
-    "f1 = f1_score(y_pred, y_regular, average=\"weighted\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d97aab66afe5349",
-   "metadata": {},
-   "source": [
-    "### MLP 2 couches cachées"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "83db9a0c20315756",
-   "metadata": {},
-   "source": [
-    "y_pred = model_start.predict_data(\"MLP_H2\")\n",
-    "f1 = f1_score(y_pred, y_regular, average=\"weighted\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
-   ],
+   "id": "13a78d1a4cd0cdf2",
    "outputs": [],
    "execution_count": null
   },
@@ -2770,82 +2740,53 @@
    "cell_type": "markdown",
    "id": "a42703b60c0a1903",
    "metadata": {},
-   "source": [
-    "### Préparation des données pour les réseaux de neurones"
-   ]
+   "source": "### Meilleur modèle avancé (TODO)"
   },
   {
    "cell_type": "code",
    "id": "6f8044de5e5097ef",
    "metadata": {},
    "source": [
-    "# Chargement des données de test\n",
-    "X_playoff = playoff_test_data [characteristics]\n",
-    "y_playoff = playoff_test_data ['isGoal'][X_playoff.index]\n",
+    "# Sélection des caractéristiques\n",
+    "characteristics = ['shotDistance', 'shotAngle', 'numberPeriod', 'gameSeconds'\n",
+    "    , 'emptyGoalNet', 'offensivePressureTime', 'speedFromLastEvent', 'distanceFromLastEvent']\n",
     "\n",
-    "# Ajout dans le fichier config.py :\n",
-    "config.TEST_DATA = X_playoff.to_numpy()"
+    "X = playoff_test_data[characteristics].dropna()\n",
+    "y = playoff_test_data['isGoal'][X.index]\n",
+    "\n",
+    "# Chargement des données\n",
+    "config.INPUTS_DATA = X.to_numpy()\n",
+    "config.LABELS_DATA = y.to_numpy()"
    ],
    "outputs": [],
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "57f0cc2deb08ca14",
    "metadata": {},
-   "source": [
-    "### Perceptron"
-   ]
-  },
-  {
    "cell_type": "code",
-   "id": "82026ab9b5aa04d3",
-   "metadata": {},
    "source": [
-    "y_pred = model_start.predict_data(\"Perceptron\")\n",
-    "f1 = f1_score(y_pred, y_playoff, average=\"weighted\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+    "# Initialize a run\n",
+    "run = wandb.init(project=config.WANDB_PROJECT_NAME, entity=config.WANDB_TEAM_NAME)\n",
+    "\n",
+    "# Access and download model. Returns path to downloaded artifact\n",
+    "downloaded_model_path = run.use_model(name = \"XGBoost_improved_with_new_features:latest\")\n",
+    "\n",
+    "# Charger le modèle\n",
+    "with open(downloaded_model_path, \"rb\") as file:  # \"rb\" signifie lecture en mode binaire\n",
+    "    xgb_model = pickle.load(file)\n",
+    "\n",
+    "y_pred_prob_xgb = xgb_model.predict_proba(x_test_transformed)[:, 1]\n",
+    "y_pred_xgb = xgb_model.predict(x_test_transformed)\n",
+    "\n",
+    "auc_roc = roc_auc_score(y_test, y_pred_prob_xgb)\n",
+    "f1 = f1_score(y_pred_xgb, y_test, average=\"weighted\")\n",
+    "ece = compute_ece(y_test, y_pred_prob_xgb)\n",
+    "\n",
+    "print(f\"F1 pondéré: {f1}\")\n",
+    "print(f\"AUC: {auc_roc}\")\n",
+    "print(f\"ece: {ece}\")"
    ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8b4ce7d77315b12d",
-   "metadata": {},
-   "source": [
-    "### MLP 1 couche cachée"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "f1b77493aa66f6ce",
-   "metadata": {},
-   "source": [
-    "y_pred = model_start.predict_data(\"MLP_H1\")\n",
-    "f1 = f1_score(y_pred, y_playoff, average=\"weighted\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9f861bfd46e2d34",
-   "metadata": {},
-   "source": [
-    "### MLP 2 couches cachées"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "6191d485fe81d820",
-   "metadata": {},
-   "source": [
-    "y_pred = model_start.predict_data(\"MLP_H2\")\n",
-    "f1 = f1_score(y_pred, y_playoff, average=\"weighted\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
-   ],
+   "id": "26cf61244d059a2f",
    "outputs": [],
    "execution_count": null
   }
