--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -1258,7 +1258,7 @@
     "    pickle.dump(clf1, f)\n",
     "\n",
     "# Enregistrer le modèle avec WandB\n",
-    "run.log_model(path=\"LogisticRegression_Distance.pkl\", name=\"LogisticRegression_Distance\")\n",
+    "run.log_model(path=model_path1, name=\"LogisticRegression_Distance\")\n",
     "\n",
     "# Terminer l'expérience\n",
     "wandb.finish()"
@@ -1310,7 +1310,7 @@
     "    pickle.dump(clf2, f)\n",
     "\n",
     "# Enregistrer le modèle avec WandB\n",
-    "run.log_model(path=\"LogisticRegression_Angle.pkl\", name=\"LogisticRegression_Angle\")\n",
+    "run.log_model(path=model_path2, name=\"LogisticRegression_Angle\")\n",
     "\n",
     "# Terminer l'expérience\n",
     "wandb.finish()"
@@ -1362,7 +1362,7 @@
     "    pickle.dump(clf3, f)\n",
     "\n",
     "# Enregistrer le modèle avec WandB\n",
-    "run.log_model(path=\"LogisticRegression_Distance_Angle.pkl\", name=\"LogisticRegression_Distance_Angle\")\n",
+    "run.log_model(path=model_path3, name=\"LogisticRegression_Distance_Angle\")\n",
     "\n",
     "# Terminer l'expérience\n",
     "wandb.finish()"
@@ -1987,7 +1987,7 @@
     "    pickle.dump(xgb_advanced, f)\n",
     "\n",
     "# Enregistrer le modèle avec WandB\n",
-    "run.log_model(path=\"XGBoost_improved_with_new_features.pkl\", name=\"XGBoost_improved_with_new_features\")\n",
+    "run.log_model(path=model_path, name=\"XGBoost_improved_with_new_features\")\n",
     "\n",
     "# Terminer l'expérience\n",
     "wandb.finish()"
@@ -2321,7 +2321,7 @@
     "    pickle.dump(xgb_advanced_2, f)\n",
     "\n",
     "# Enregistrer le modèle avec WandB\n",
-    "run.log_model(path=\"XGBoost_improved_with_selected_features.pkl\", name=\"XGBoost_improved_with_selected_features\")\n",
+    "run.log_model(path=model_path, name=\"XGBoost_improved_with_selected_features\")\n",
     "\n",
     "# Terminer l'expérience\n",
     "wandb.finish()"
