--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -2515,7 +2515,12 @@
   {
    "cell_type": "code",
    "id": "9de912320ec3c7b0",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-23T02:45:01.631387Z",
+     "start_time": "2024-11-23T02:45:01.605623Z"
+    }
+   },
    "source": [
     "filename = './data/dataframe_2020_to_2021.csv'\n",
     "start_year = 2020\n",
@@ -2536,7 +2541,7 @@
     "    df_2020_to_2021.to_csv(filename, index=False)"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 141
   },
   {
    "cell_type": "markdown",
@@ -2549,7 +2554,12 @@
   {
    "cell_type": "code",
    "id": "e2e27c2c3ffb3c63",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-23T02:45:04.627609Z",
+     "start_time": "2024-11-23T02:45:03.991962Z"
+    }
+   },
    "source": [
     "test_data = pd.read_csv(filename)\n",
     "\n",
@@ -2558,7 +2568,7 @@
     "playoff_test_data = test_data[test_data['gameType'] == \"playoffs\"].dropna()"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 142
   },
   {
    "cell_type": "markdown",
@@ -2645,7 +2655,12 @@
    "source": "### Meilleur modèle avancé (TODO)"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-23T02:45:09.942736Z",
+     "start_time": "2024-11-23T02:45:09.902620Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Sélection des caractéristiques\n",
@@ -2661,36 +2676,105 @@
    ],
    "id": "9efd547004f96d0b",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 143
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-23T02:45:43.189234Z",
+     "start_time": "2024-11-23T02:45:11.328996Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Initialize a run\n",
     "run = wandb.init(project=config.WANDB_PROJECT_NAME, entity=config.WANDB_TEAM_NAME)\n",
     "\n",
     "# Access and download model. Returns path to downloaded artifact\n",
-    "downloaded_model_path = run.use_model(name = \"XGBoost_improved_with_new_features:latest\")\n",
-    "\n",
-    "# Charger le modèle\n",
-    "with open(downloaded_model_path, \"rb\") as file:  # \"rb\" signifie lecture en mode binaire\n",
-    "    xgb_model = pickle.load(file)\n",
-    "\n",
-    "y_pred_prob_xgb = xgb_model.predict_proba(x_test_transformed)[:, 1]\n",
-    "y_pred_xgb = xgb_model.predict(x_test_transformed)\n",
-    "\n",
-    "auc_roc = roc_auc_score(y_test, y_pred_prob_xgb)\n",
-    "f1 = f1_score(y_pred_xgb, y_test, average=\"weighted\")\n",
-    "ece = compute_ece(y_test, y_pred_prob_xgb)\n",
-    "\n",
-    "print(f\"F1 pondéré: {f1}\")\n",
-    "print(f\"AUC: {auc_roc}\")\n",
-    "print(f\"ece: {ece}\")"
+    "downloaded_model_path = run.use_model(name = \"Perceptron_best_model:latest\")"
    ],
    "id": "13a78d1a4cd0cdf2",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "Tracking run with wandb version 0.18.3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "Run data is saved locally in <code>/home/thierry/Desktop/M1/T1/IFT 6758 - Data Science/Projet/Milestone-2/wandb/run-20241122_214511-066lwlz4</code>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/066lwlz4' target=\"_blank\">chocolate-cloud-1156</a></strong> to <a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       " View project at <a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11' target=\"_blank\">https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11</a>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       " View run at <a href='https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/066lwlz4' target=\"_blank\">https://wandb.ai/youry-macius-universite-de-montreal/IFT6758.2024-A11/runs/066lwlz4</a>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[34m\u001B[1mwandb\u001B[0m:   1 of 1 files downloaded.  \n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Perceptron' object has no attribute 'predict_proba'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[144], line 11\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mopen\u001B[39m(downloaded_model_path, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrb\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;28;01mas\u001B[39;00m file:  \u001B[38;5;66;03m# \"rb\" signifie lecture en mode binaire\u001B[39;00m\n\u001B[1;32m      9\u001B[0m     xgb_model \u001B[38;5;241m=\u001B[39m pickle\u001B[38;5;241m.\u001B[39mload(file)\n\u001B[0;32m---> 11\u001B[0m y_pred_prob_xgb \u001B[38;5;241m=\u001B[39m \u001B[43mxgb_model\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpredict_proba\u001B[49m(x_test_transformed)[:, \u001B[38;5;241m1\u001B[39m]\n\u001B[1;32m     12\u001B[0m y_pred_xgb \u001B[38;5;241m=\u001B[39m xgb_model\u001B[38;5;241m.\u001B[39mpredict(x_test_transformed)\n\u001B[1;32m     14\u001B[0m auc_roc \u001B[38;5;241m=\u001B[39m roc_auc_score(y_test, y_pred_prob_xgb)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Perceptron' object has no attribute 'predict_proba'"
+     ]
+    }
+   ],
+   "execution_count": 144
   },
   {
    "cell_type": "markdown",
@@ -2769,22 +2853,7 @@
     "run = wandb.init(project=config.WANDB_PROJECT_NAME, entity=config.WANDB_TEAM_NAME)\n",
     "\n",
     "# Access and download model. Returns path to downloaded artifact\n",
-    "downloaded_model_path = run.use_model(name = \"XGBoost_improved_with_new_features:latest\")\n",
-    "\n",
-    "# Charger le modèle\n",
-    "with open(downloaded_model_path, \"rb\") as file:  # \"rb\" signifie lecture en mode binaire\n",
-    "    xgb_model = pickle.load(file)\n",
-    "\n",
-    "y_pred_prob_xgb = xgb_model.predict_proba(x_test_transformed)[:, 1]\n",
-    "y_pred_xgb = xgb_model.predict(x_test_transformed)\n",
-    "\n",
-    "auc_roc = roc_auc_score(y_test, y_pred_prob_xgb)\n",
-    "f1 = f1_score(y_pred_xgb, y_test, average=\"weighted\")\n",
-    "ece = compute_ece(y_test, y_pred_prob_xgb)\n",
-    "\n",
-    "print(f\"F1 pondéré: {f1}\")\n",
-    "print(f\"AUC: {auc_roc}\")\n",
-    "print(f\"ece: {ece}\")"
+    "downloaded_model_path = run.use_model(name = \":Perceptron_best_model:latest\")"
    ],
    "id": "26cf61244d059a2f",
    "outputs": [],
