addition of cumulative graphics to advanced models section

--- a/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
+++ b/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
@@ -91,7 +91,7 @@ de ce type de modèle:
 
 ![](/public/modele_avance_q3_goal_rate.png)
 
-<!-- Ajouter courbe cumulative -->
+![](/public/modele_avance_q3_cumulative_goal_proportion.png)
 
 ![](/public/modele_avance_q3_reliability_diagram.png)
 
