advanded models section in blog is completed

--- a/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
+++ b/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
@@ -134,13 +134,25 @@ qui maximisait l'**érreur de calibration attendue négative**. Le graphique sui
 ![](/public/modele_avance_q2_grid_search_hyperparameter_new.png)
 
 C'est donc la 16ième combinaison d'hyperparamètres qu'on a choisie pour notre modèle.
-Concernant les résultats du modèle, on voit qu'il a un meilleur AUC que le modèle XGBoost de base, tout en restant assez bien calibré.
+Concernant les résultats du modèle, on voit dans les graphiques qu'il a un meilleur AUC que le modèle XGBoost de base, tout en restant assez bien calibré.
 
 <!-- Ajouter lien expérience wandb -->
 
 ### Modèle XGBoost avec des caractéristiques sélectionnées
 
+Ici, on a procédé à une sélection des caractéristiques utlisées par le modèle précédent.
+On a fait cette sélection en utilisant l'importance des caractéristiques dans la construction d'une forêt aléatoire à partir des données.
+Les importances des 15 caractéristiques variaient entre **0.0005** et **0.1**. Il fallait définir un seuil tel que les variables avec une importance plus basse que ce seuil
+seraient rétirées de l'ensemble. Le graphique suivant donne un apercu de l'érreur de calibration attendue qu'on a obtenue (par validation croisée) pour les différents seuils testés:
 
+![](/public/modele_avance_q3_feature_selection_random_forest.png)
+
+C'est donc le seuil **0.0815** qu'on a utilisé pour notre sélection de caractéristique vu qu'il nous a donné l'érreur la plus basse.
+Avec ce seuil, 8 variables explicatives sur les 15 initiales ont été conservées.
+On remarque sur les graphiques que malgré cette diminution de pres de moitié du nombre de caractéristiques, l'AUC du modèle obtenu (**0.75**) reste encore bien supérieur
+à celui du modèle XGBoost de base (**0.71**). De plus, ce nouveau modèle est toujours bien calibré.
+
+<!-- Ajouter lien expérience wandb -->
 
 ## Faites de votre mieux
 
